# tableturf-cpp

./: README.md  meson.build  settings.json
client/: channel.hpp  client.cpp  client.hpp  config.cpp  config.hpp  game.cpp  game.hpp  main.cpp  meson.build
client/states/: info.cpp  info.hpp  join_lobby.cpp  join_lobby.hpp  lobby.cpp  lobby.hpp  main_menu.cpp  main_menu.hpp
client/ui/: button.cpp  button.hpp  textbox.cpp  textbox.hpp  ui.hpp
data/resources/: cards.json  cards.yaml
libtableturf/: board.cpp  board.hpp  card.cpp  card.hpp  game.hpp  json.cpp  json.hpp  lib.cpp  meson.build  protocol.cpp  protocol.hpp  tableturf.hpp  yaml_conversions.cpp  yaml_conversions.hpp
libtableturf/tests/: board_fin.cpp  board_layouts.cpp  card_json.cpp  card_yaml.cpp  messages.cpp
server/: client.cpp  client.hpp  client_state.cpp  client_state.hpp  main.cpp  meson.build  server.cpp  server.hpp
subprojects/: .gitignore  json.wrap  raylib.wrap  yaml_cpp.wrap
